--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript" src="data.js"></script>
         <script type="text/javascript" src="mainScat.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="scatStyle.css">
     </head>
     <body>
         <div class="container">
             <header>
                 <img src="scatLogo.png" title="Name That Scat Logo">
-            </header>
-            <div id="image"></div>
+            </header>           
             <div>
                 <form>
                     <label>Whose scat is it anyway: </label>
@@ -19,6 +19,7 @@
                     <button>Submit Guess</button>
                 </form>
             </div>
+            <div id="image" class="image"></div>
         </div>
     </body>
 </html>
