--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
             </header>           
             <div>
                 <form>
-                    <label>Whose scat is it anyway: </label>
+                    <div><label>Whose scat is it anyway? </label></div>
                     <input></input>
                     <button>Submit Guess</button>
                 </form>
             </div>
             <div id="image" class="image"></div>
+            <div id="caption" class="caption"></div>
         </div>
     </body>
 </html>
