--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
                 <div id="caption" class="caption"></div>
             </div>
             <div id="failure" class="scatFail hidden">
-                <span class="message">Wrong!</span>
-                <button onclick="tryAgain()">Try Again</button>
+                <div class="message">Wrong!</div>
+                <div><button onclick="tryAgain()">Try Again</button></div>
             </div>
             <div id="success" class="scatPwn hidden">
-                <span class="message">That's Correct!</span>
-                <button onclick="getPrize()">Collect Prize!</button>
+                <div class="message">That's Correct!</div>
+                <div><button onclick="getPrize()">Collect Prize!</button></div>
             </div>
             <div id="prize" class="scatPwn hidden" onclick="getPrize()">
                 <div class="message">Sayonara, Ryan!</div>
-                <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" />
+                <div><img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" /></div>
             </div>
         </div>
     </body>
