Clear guess when trying again.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
                 <img src="scatLogo.png" title="Name That Scat Logo">
             </header>           
             <div id="question">
-                <div style="margin: 1rem;">                    
+                <div style="margin: 1rem;">
                     <label>Whose scat is it anyway? </label>
-                    <input></input>
+                    <input id="guess"></input>
                     <button onclick="submitGuess()">Submit Guess</button>                    
                 </div>
                 <div id="image" class="image"></div>            
